--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "budget-planner",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "run": "node app.js",
+    "start": "node index.js",
+    "run": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
