--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "run": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +23,13 @@
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "routes": "^2.1.0"
-  }
+  },
+  {
+    "name": "api-make",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "engines": {
+      "node": "14.x"
+    }
 }
